kubernetes/kgateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fitness-gateway
  namespace: fitness-tracker
spec:
  gatewayClassName: kgateway-class # Exposing using KGateway Class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
  namespace: fitness-tracker
spec:
  parentRefs:
    - name: fitness-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fitness-tracker-service
          port: 80
